--- a/css/html-chords.css
+++ b/css/html-chords.css
@@ -3,3 +3,4 @@ span.chord {position:absolute;line-height:0;font-weight:bold;}
 span.chord-inline {font-weight:bold;}
 div.transposition a.transposition {margin:5px;}
 div.song div.transposition {margin-bottom:20px;}
+.rtl {direction:rtl}
